[package]
name = "DataHow"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.14"
probabilistic-collections = "0.6"
env_logger = "0.10"
log = "0.4"
bytes = "1"
num_cpus = "1.17.0"


[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", features = ["json", "gzip"] }
